# AiMastermind

./: .replit  DEPLOYMENT.md  README.md  create_database.sql  package-lock.json  package.json  pyproject.toml  start.sh  theme.json
attached_assets/: Pasted--AI-Landing-Page-Generator-Project-Overview-An-intelligent-qualification-system-for-AI-Masterm-1740527716483.txt  Pasted--Server-Starting-FastAPI-server-FastAPI-2025-02-23-21-03-38-798-INFO-sqlalchemy-engine-Engine-1740344699166.txt  Pasted--code-100-data-session-id-35fbdc76-e10a-11ef-ab64-36bdd396d627-sdp--1738462050997.txt  Pasted--fastapi-exceptions-ResponseValidationError-7-validation-errors-type-missing-loc--1740345194041.txt  Pasted--rest-express-1-0-0-dev-tsx-server-index-ts-Server-Starting-FastAPI-server-FastAPI-Err-1738974208291.txt  Pasted--tsx-server-index-ts-Server-Starting-FastAPI-server-2-30-29-AM-express-Express-server-se-1738560249647.txt  Pasted-10-38-04-PM-express-serving-on-port-5000-10-38-06-PM-express-GET-api-config-active-400-in-2ms--1738363146420.txt  Pasted-10-41-33-PM-express-serving-on-port-5000-10-41-37-PM-express-GET-api-config-active-400-in-3ms--1738363339651.txt  Pasted-2025-02-28-13-30-04-31-9de18398-User-agent-Agent-2025-02-28-13-30-04-31-9de18398-User-soc-1740778321751.txt  Streaming API v2 Integration_ using LiveKit.rtf  conversation_flows.csv  gpt_messages.py  heygen_instructions.txt  openapi.json  routes.ts
backend/: __init__.py  database.py  main.py  models.py  schemas.py
client/public/: test.html
client/src/: App.tsx  (+2 more)
db/: schema.ts
server/: api-test.ts  index.ts  routes.ts
(+21 files in other folders)
